# gserver

./: .gitignore  README.md  Readme.md  ddepb.bat  gserver.vcxproj  readme.md  test.cpp  test.ilk  test_checksum.cpp
client/: build.bat  catatan.txt  gserver.vcxproj
client/src/: main.cpp
include/: log.hpp
include/gserFunction/: caster.h  (+4 more)
src/: dukumentasi.txt  filefunc.cpp  fileswraper.cpp  fungsiTable.cpp  main.cpp
test/maploader/: CMakeLists.txt  main.cpp
test/maploader/chunk/: chunk.hpp
test/maploader/entity/: component.hpp  list.hpp
test/maploader/entity/player/: list.hpp
test/maploader/include/: caster.h  common.hpp  forward.hpp  game.hpp
test/maploader/include/chunk/: chunk.hpp
test/maploader/include/entity/: component.hpp  entity.hpp  list.hpp
test/maploader/include/eventListener/: eventType.hpp
test/maploader/include/internal/: datatype.hpp  internal.hpp  parse-old.hpp
test/maploader/include/internal/component/: const.hpp  value.hpp
test/maploader/include/map/: indeksArea.hpp  loader.hpp  option.hpp
test/maploader/include/register/: register.hpp
test/maploader/include/testmap/chunks/: sch0_0.map
test/maploader/include/tile/: component.hpp  list.hpp  tile.hpp
test/maploader/internal/: datatype.hpp  doc.txt  internal.hpp
test/maploader/map/: Area.hpp  filemap.hpp  loader.hpp
test/maploader/register/: register.hpp
test/maploader/src/: main.cpp
test/maploader/src/register/: register.cpp
test/maploader/testmap/: option.json
test/maploader/testmap/chunks/: sch0_0.map.map
test/maploader/tile/: component.hpp  list.hpp
(+25 files in other folders)
